--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
-agp = "8.9.1"
+agp = "8.9.2"
 kotlin = "2.0.21"
 ksp = "2.0.21-1.0.25"
+kapt = "2.1.20"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -13,7 +14,7 @@ lifecycleLivedataKtx = "2.8.7"
 lifecycleViewmodelKtx = "2.8.7"
 navigationFragmentKtx = "2.8.9"
 navigationUiKtx = "2.8.9"
-room = "2.7.0"
+room = "2.7.1"
 timber = "5.0.1"
 
 [libraries]
@@ -35,4 +36,5 @@ timber = {group="com.jakewharton.timber", name="timber", version.ref="timber"}
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 devtools-ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
+kotlin-kapt = {id = "org.jetbrains.kotlin.kapt", version.ref ="kapt"}
 
